2008-05-12  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (IngresarFactura): The n_doc argument and
	the arguments related to date all moved to gint.

	* compras.c (IngresarCompra): Added the invoice argument to know
	when we will ingress an invoice or not.

	* utils.c (display_calendar): Added a -1 when set the month on the
	GtkCalendar, this sinces GtkCalendar set the months from 0 to 11
	and GDate set them from 1 to 12 and left 0 for a bad month. Also
	add  valid date check.

2008-05-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c: (check_regexp): Drop function. It should't ever be here.

	* utils.c (display_calendar): Fixed the position of the
	GtkCalendar and drop the use of the vbox to put the calendar
	inside the GtkWindow. Some order and drop the use of unnecessary functions.
	(validate_string): Add function.

2008-05-04  Jonathan Gonzalez V.  <zeus@gnu.org>

	* utils.c: Added this function to display a calendar ander a
	button and put the selected date into a GtkEntry. This is to
	replace the GnomeDateEdit widget that isn't supported yet with GtkBuilder.

2008-04-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (SearchProductHistory|AddToProductsList): Use of GtkBuilder.
	(ShowProductDescription|compras_win): Deleted commented code. We
	have VC use it if you want to read old code.
	(FillDataProduct): Deleted function. It was just commented code.
	(AddToProductsList): Use GtkBuilder. Add some brackets.
	(on_button_buy_clicked): Added new function to handle button
	signal clicked.
	(Comprar): Deleted the use of function InsertarCompras(), this was
	inserting an creating a treeview everytime that we bought something.
	(CallBacksTabs): Rename this function for on_buy_notebook_change_current_page().
	(CalcularTotales): Modified to use GtkBuilder.

2008-04-05  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (compras_win): Added GError to gtk_builder_add_from_file
	to check any wrong object.
